name:                sahje
version:             0.1.0.0
synopsis:            Schema Aware Haskell JSON Editor
description:         Please see README.md
homepage:            https://github.com/greenrd/sahje#readme
license:             BSD3
license-file:        LICENSE
author:              Robin Green
maintainer:          greenrd@greenrd.org
copyright:           Robin Green
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable sahje
  hs-source-dirs:      app
  other-modules:       Args
  main-is:             Main.hs
  build-depends:       aeson >= 0.11.2.1 && < 0.12
                     , base
                     , brick >= 0.15.2
                     , classy-prelude >= 1.0.2 && < 1.1
                     , hjsonschema >= 1.3.0.0 && < 1.4
                     , optparse-applicative >= 0.12.1.0 && < 0.13
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/greenrd/sahje
